# denomination-comparisons.github.io

./: .env  .gitignore  Dockerfile  LICENSE  README.md  assignment-1.txt  cefr_classifier.py  further_development_prompt.txt  further_development_prompt_2.txt  grok-4-web-prompt.txt  grok-4-web-reply.txt  grok-4-web-reply2.txt  prompt_for_grok.txt  reply_from_grok.txt  reply_from_grok2.txt  run.py  text_modifier.py  token_settings.txt
Bible-timeline/: index.html
LivetsOrd/: appendix-tre-fornkyrkliga-trosbekannelser-page-127.html  appendix-tre-fornkyrkliga-trosbekannelser-page-128.html  appendix-tre-fornkyrkliga-trosbekannelser-page-129.html  chapter-1-uppenbarelsen-page-10.html  chapter-1-uppenbarelsen-page-11.html  chapter-1-uppenbarelsen-page-12.html  chapter-1-uppenbarelsen-page-13.html  chapter-1-uppenbarelsen-page-14.html  chapter-1-uppenbarelsen-page-15.html  chapter-1-uppenbarelsen-page-16.html  chapter-1-uppenbarelsen-page-17.html  chapter-1-uppenbarelsen-page-18.html  chapter-1-uppenbarelsen-page-19.html  chapter-1-uppenbarelsen-page-7.html  chapter-1-uppenbarelsen-page-8.html  chapter-1-uppenbarelsen-page-9.html  chapter-1-uppenbarelsen.md  chapter-2-angelologi.md  chapter-2-teologi-laran-om-Gud-page-21.html  chapter-2-teologi-laran-om-Gud-page-22.html  chapter-2-teologi-laran-om-Gud-page-23.html  chapter-2-teologi-laran-om-Gud-page-24.html  chapter-2-teologi-laran-om-Gud-page-25.html  chapter-2-teologi-laran-om-Gud-page-26.html  chapter-2-teologi-laran-om-Gud-page-27.html  chapter-2-teologi-laran-om-Gud-page-28.html  chapter-2-teologi-laran-om-Gud-page-29.html  chapter-2-teologi-laran-om-Gud-page-30.html  chapter-2-teologi-laran-om-Gud-page-31.html  chapter-2-teologi-laran-om-Gud-page-32.html  chapter-2-teologi-laran-om-Gud-page-33.html  chapter-2-teologi-laran-om-Gud-page-34.html  chapter-3-kristologi-page-36.html  chapter-3-kristologi-page-37.html  chapter-3-kristologi-page-38.html  chapter-3-kristologi-page-39.html  chapter-3-kristologi-page-40.html  chapter-3-kristologi-page-41.html  chapter-3-kristologi-page-42.html  chapter-3-soteriologi.md  (+84 more)
agora-portal/: index.html
gymnasieskolan/gy25/PROA/llvm_demo_project/: CMakeLists.txt  README.md
gymnasieskolan/gy25/PROA/llvm_demo_project/src/: Add2Sub.cpp  main.cpp  simple_lang.c
gymnasieskolan/gy25/PROA/llvm_instruction_counter/: CMakeLists.txt
(+505 files in other folders)
